--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
-    "name": "shipfunk/magento2-plugin",
+    "name": "nord/module-shipfunk",
     "description": "Shipfunk shipping method",
     "require": {
         "php": "~5.6.0|7.0.2|~7.0.6",
         "magento/module-sales": "100.*",
         "dvdoug/boxpacker": "2.0.2",
-        "rmccue/requests": "^1.7", 
-        "shipfunk/magento2-plugin"
+        "rmccue/requests": "^1.7"
     },
     "type": "magento2-module",
-    "version": "dev-master",
+    "version": "1.0.2.0",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
@@ -19,7 +18,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Nord\\Shipfunk\\": "dev-master"
+            "Nord\\Shipfunk\\": ""
         }
     }
 }
