--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "nord/module-shipfunk",
-    "description": "Shipfunk shipping method",
+    "description": "Shipfunk shipping method for Magento 2",
     "require": {
         "php": "~5.6.0|7.0.2|~7.0.6",
         "magento/module-sales": "100.*",
