removing unused files, removing rmccue/requests dependency (enabling extension zipping for manual installation), v.1.2 configuration fields

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "require": {
         "php": "~5.6.0|7.0.2|~7.0.6",
         "magento/module-sales": "~100.0|~101.0",
-        "dvdoug/boxpacker": "2.0.2",
-        "rmccue/requests": "^1.7"
+        "dvdoug/boxpacker": "2.0.2"
     },
     "type": "magento2-module",
     "version": "1.0.2",
