--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Shipfunk shipping method for Magento 2",
     "require": {
         "php": "~5.6.0|7.0.2|~7.0.6",
-        "magento/module-sales": "~100.0|~101.0",
-        "dvdoug/boxpacker": "2.0.2"
+        "magento/module-sales": "~100.0|~101.0"
     },
     "type": "magento2-module",
     "version": "1.0.2",
