Revert "Added another php version into the composer.json"
This reverts commit 22a956bdf2021724f39be8d9f819a562ef57bb55.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "nord/module-shipfunk",
     "description": "Shipfunk shipping method for Magento 2",
     "require": {
-        "php": "~5.6.0|7.0.2|~7.0.6|~7.1.12",
+        "php": "~5.6.0|7.0.2|~7.0.6",
         "magento/module-sales": "100.*",
         "dvdoug/boxpacker": "2.0.2",
         "rmccue/requests": "^1.7"
